--- a/plaas4u_app/static/custom.css
+++ b/plaas4u_app/static/custom.css
@@ -39,3 +39,38 @@ body {
 footer {
     opacity: 70%;
 }
+
+/*
+*
+* SEARCH RESULTS
+*
+*/
+
+.card {
+    border: 0;
+    box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
+    -ms-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #ffffff;
+    background-clip: border-box;
+    border-radius: 8px;
+    opacity: 86%;
+}
+.widget-26 {
+    line-height: 1.5;
+    color: #3c4142;
+    font-size: 0.8125rem;
+}
+
+.widget-26-image {
+    width: 100px;
+    height: 70px;
+}
