--- a/plaas4u_app/templates/layout.html
+++ b/plaas4u_app/templates/layout.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="static/sticky-footer-navbar.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="static/custom.css" rel="stylesheet">
+    
     <title>Plaas4u - Find the farm of your dreams!</title>
 </head>
 <body class="d-flex flex-column h-100">
